--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -49,12 +49,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@storybook/addon-styling": "^1.3.7",
-    "@tanstack/react-query": "^5.0.0-beta.9",
-    "@tanstack/react-query-devtools": "^5.0.0-beta.9",
+    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query-devtools": "^5.0.0",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
     "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
@@ -66,17 +66,17 @@
     "connectkit": "^1.5.3",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.5.4",
+    "next": "^13.5.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-day-picker": "^8.8.2",
+    "react-day-picker": "^8.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "superjson": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^4.4.11",
-    "wagmi": "^1.4.3",
+    "wagmi": "^1.4.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -84,33 +84,33 @@
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@storybook/addon-actions": "^7.4.6",
-    "@storybook/addon-backgrounds": "^7.4.6",
-    "@storybook/addon-docs": "^7.4.6",
-    "@storybook/addon-essentials": "^7.4.6",
-    "@storybook/addon-interactions": "^7.4.6",
-    "@storybook/addon-links": "^7.4.6",
-    "@storybook/addon-measure": "^7.4.6",
-    "@storybook/addon-outline": "^7.4.6",
+    "@storybook/addon-actions": "^7.5.0",
+    "@storybook/addon-backgrounds": "^7.5.0",
+    "@storybook/addon-docs": "^7.5.0",
+    "@storybook/addon-essentials": "^7.5.0",
+    "@storybook/addon-interactions": "^7.5.0",
+    "@storybook/addon-links": "^7.5.0",
+    "@storybook/addon-measure": "^7.5.0",
+    "@storybook/addon-outline": "^7.5.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-themes": "^7.4.6",
-    "@storybook/addons": "^7.4.6",
-    "@storybook/channel-postmessage": "^7.4.6",
-    "@storybook/channel-websocket": "^7.4.6",
-    "@storybook/client-api": "^7.4.6",
-    "@storybook/nextjs": "^7.4.6",
-    "@storybook/preview-api": "7.4.6",
-    "@storybook/preview-web": "^7.4.6",
-    "@storybook/react": "^7.4.6",
-    "@storybook/react-vite": "^7.4.6",
+    "@storybook/addon-themes": "^7.5.0",
+    "@storybook/addons": "^7.5.0",
+    "@storybook/channel-postmessage": "^7.5.0",
+    "@storybook/channel-websocket": "^7.5.0",
+    "@storybook/client-api": "^7.5.0",
+    "@storybook/nextjs": "^7.5.0",
+    "@storybook/preview-api": "7.5.0",
+    "@storybook/preview-web": "^7.5.0",
+    "@storybook/react": "^7.5.0",
+    "@storybook/react-vite": "^7.5.0",
     "@storybook/testing-library": "0.2.2",
-    "@types/node": "^20.8.4",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "shadcn-ui": "^0.4.1",
-    "storybook": "^7.4.6",
+    "storybook": "^7.5.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "unist-builder": "^4.0.0",
