--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -7,6 +7,7 @@
       "env": [
         "DATABASE_URL",
         "LIGHT_ADMIN_TOKEN",
+        "LIGHT_RPC_TOKEN",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
         "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
