--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -299,6 +299,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
       - name: Run Slither
         uses: crytic/slither-action@v0.3.0
         id: slither
