--- a/packages/client/turbo.json
+++ b/packages/client/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["NODE_ENV", "LIGHT_ADMIN_TOKEN", "LIGHT_RPC_TOKEN", "VERCEL_ENV"],
+      "env": ["NODE_ENV", "LIGHT_ADMIN_TOKEN", "LIGHT_RPC_TOKEN"],
       "inputs": ["src/**"],
       "outputs": ["dist/**"]
     },
