feat: ini user opi

--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -8,8 +8,10 @@
         "DATABASE_URL",
         "LIGHT_ADMIN_TOKEN",
         "LIGHT_RPC_TOKEN",
+        "LOCAL_ENV",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
+        "NEXT_PUBLIC_LOCAL_ENV",
         "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_SIGNIN_MESSAGE",
