--- a/packages/client/turbo.json
+++ b/packages/client/turbo.json
@@ -4,7 +4,13 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "env": ["NODE_ENV", "LIGHT_ADMIN_TOKEN", "LIGHT_RPC_TOKEN"],
+      "env": [
+        "NODE_ENV",
+        "LIGHT_ADMIN_TOKEN",
+        "LIGHT_RPC_TOKEN",
+        "LOCAL_ENV",
+        "NEXT_PUBLIC_LOCAL_ENV"
+      ],
       "inputs": ["src/**"],
       "outputs": ["dist/**"]
     },
