feat: ini admin token

--- a/apps/app/.env.development
+++ b/apps/app/.env.development
@@ -3,3 +3,4 @@ NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="secret"
 VERCEL_ENV="development"
 NEXT_PUBLIC_LOCAL_ENV="dev"
+NEXT_PUBLIC_LIGHT_ADMIN_TOKEN="dev"
