--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -11,6 +11,7 @@
         "LOCAL_ENV",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
+        "NEXT_PUBLIC_LIGHT_ADMIN_TOKEN",
         "NEXT_PUBLIC_LOCAL_ENV",
         "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
         "NEXT_PUBLIC_SENTRY_DSN",
