--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -33,6 +33,7 @@
   lightdotso-tracing = { workspace = true }
   prisma-client-rust = { workspace = true }
   rundler-types = { workspace = true }
+  rustc-hex = { workspace = true }
   serde = { workspace = true, features = ["derive"] }
   serde_json = { workspace = true }
   tokio = { workspace = true }
