--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,6 +163,7 @@
   rundler-sim = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-sim" }
   rundler-types = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-types" }
   rundler-utils = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-utils" }
+  rustc-hex = "2.1.0"
   serde = "1.0.183"
   serde_json = "1.0.104"
   spki = "0.7.2"
