--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "tsc",
     "build:test": "concurrently \"pnpm:*:compile\"",
-    "build:turbo": "turbo run build",
+    "build:turbo": "dotenv -- turbo run build",
     "changeset": "changeset",
     "depcheck:lint": "pnpm -r exec depcheck .",
     "deploy:checkly": "checkly deploy",
@@ -38,7 +38,7 @@
     "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently \"pnpm:*:lint\"",
-    "lint:turbo": "turbo run lint",
+    "lint:turbo": "dotenv -- turbo run lint",
     "ncu:check": "ncu--packageFile '{apps,configurations,packages}/**/package.json'",
     "ncu:monorepo": "ncu --packageFile '{apps,configurations,packages}/**/package.json' -u",
     "ncu:root": "ncu --packageFile package.json -u",
@@ -50,7 +50,7 @@
     "prettier:fix": "prettier --write .",
     "prettier:lint": "prettier --check .",
     "prisma": "make prisma",
-    "prisma:turbo": "turbo run prisma",
+    "prisma:turbo": "dotenv -- turbo run prisma",
     "release": "changeset publish",
     "solhint:cmd": "solhint \"contracts/**/*.sol\"",
     "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
@@ -60,7 +60,7 @@
     "taplo:fix": "taplo format *.toml crates/**/Cargo.toml fly/**/fly.toml",
     "taplo:lint": "taplo lint *.toml crates/**/Cargo.toml fly/**/fly.toml",
     "test": "vitest",
-    "test:compile": "turbo run build --filter=contracts --filter=solutions --filter=schemas --filter=client",
+    "test:compile": "dotenv -- turbo run build --filter=contracts --filter=solutions --filter=schemas --filter=client",
     "test:coverage": "vitest --coverage --single-thread",
     "test:typecheck": "vitest typecheck",
     "test:ui": "vitest dev --ui",
