--- a/.github/workflows/fastlane.yml
+++ b/.github/workflows/fastlane.yml
@@ -96,7 +96,7 @@ jobs:
           make ios
       - name: Node Build
         run: |
-          pnpm turbo run build
+          pnpm run build:turbo
         # env:
         #   JITSU_JS_KEY: ${{ secrets.JITSU_JS_KEY }}
       - name: iOS Build
