--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -30,6 +30,8 @@ jobs:
       - extension-turbo
     runs-on: ubuntu-latest
     env:
+      TURBO_API: ${{ secrets.TURBO_API }}
+      TURBO_REMOTE_CACHE_SIGNATURE_KEY: ${{ secrets.TURBO_REMOTE_CACHE_SIGNATURE_KEY }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     permissions:
