--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -305,6 +305,7 @@ jobs:
           version: nightly
       - name: Run Slither
         uses: crytic/slither-action@v0.3.0
+        continue-on-error: true
         id: slither
         with:
           fail-on: none
