--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
   },
   "dependencies": {
     "next": "13.5.6",
-    "solc": "0.8.18"
+    "solc": "0.8.18",
+    "wagmi": "1.4.5"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
