--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -32,6 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     env:
+      TURBO_API: ${{ secrets.TURBO_API }}
+      TURBO_REMOTE_CACHE_SIGNATURE_KEY: ${{ secrets.TURBO_REMOTE_CACHE_SIGNATURE_KEY }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     permissions:
@@ -45,7 +47,7 @@ jobs:
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Node Build
         run: |
-          pnpm turbo run build
+          pnpm run build:turbo
       - name: Publish to NPM
         uses: changesets/action@v1
         continue-on-error: true
