--- a/.github/workflows/extension.yml
+++ b/.github/workflows/extension.yml
@@ -30,6 +30,8 @@ jobs:
       - extension-turbo
     runs-on: ubuntu-latest
     env:
+      TURBO_API: ${{ secrets.TURBO_API }}
+      TURBO_REMOTE_CACHE_SIGNATURE_KEY: ${{ secrets.TURBO_REMOTE_CACHE_SIGNATURE_KEY }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     permissions:
@@ -42,7 +44,7 @@ jobs:
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Node Build
         run: |
-          pnpm turbo run build --filter={apps/extension}
+          pnpm run build:turbo --filter={apps/extension}
       - if: github.event_name == 'pull_request'
         name: Chrome upload
         uses: mnao305/chrome-extension-upload@v4.0.1
