--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -47,6 +47,8 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 90
     env:
+      TURBO_API: ${{ secrets.TURBO_API }}
+      TURBO_REMOTE_CACHE_SIGNATURE_KEY: ${{ secrets.TURBO_REMOTE_CACHE_SIGNATURE_KEY }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     permissions:
@@ -71,7 +73,7 @@ jobs:
           xcode-version: "14.1"
       - name: Node Build
         run: |
-          pnpm turbo run build
+          pnpm run build:turbo
       - name: Make iOS
         run: |
           make ios
