--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,6 +12,8 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 env:
+  TURBO_API: ${{ secrets.TURBO_API }}
+  TURBO_REMOTE_CACHE_SIGNATURE_KEY: ${{ secrets.TURBO_REMOTE_CACHE_SIGNATURE_KEY }}
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
 jobs:
@@ -31,7 +33,7 @@ jobs:
           version: nightly
       - name: Node Build
         run: |
-          pnpm turbo run build
+          pnpm run build:turbo
   node-lint:
     runs-on: ubuntu-latest
     timeout-minutes: 90
