--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -80,6 +80,8 @@ jobs:
       SCCACHE_BUCKET: "sccache"
       SCCACHE_ENDPOINT: ${{ secrets.SCCACHE_ENDPOINT }}
       SCCACHE_REGION: auto
+      TURBO_API: ${{ secrets.TURBO_API }}
+      TURBO_REMOTE_CACHE_SIGNATURE_KEY: ${{ secrets.TURBO_REMOTE_CACHE_SIGNATURE_KEY }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
     permissions:
@@ -113,7 +115,7 @@ jobs:
       - if: matrix.workspace
         name: Node Build
         run: |
-          pnpm turbo run build
+          pnpm run build:turbo
       - if: matrix.workspace
         name: Docker Compose Up
         run: |
