--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "license": "AGPL-3.0-or-later",
   "author": "Light, Inc.",
   "scripts": {
-    "build": "tsc",
     "build:test": "concurrently \"pnpm:*:compile\"",
-    "build:turbo": "turbo run build",
+    "build:turbo": "dotenv -- turbo run build",
     "changeset": "changeset",
     "depcheck:lint": "pnpm -r exec depcheck .",
     "deploy:checkly": "checkly deploy",
@@ -38,7 +37,7 @@
     "license:fix": "license-check-and-add -f .license-check-and-add-config.json add",
     "license:lint": "license-check-and-add -f .license-check-and-add-config.json check",
     "lint": "concurrently \"pnpm:*:lint\"",
-    "lint:turbo": "turbo run lint",
+    "lint:turbo": "dotenv -- turbo run lint",
     "ncu:check": "ncu--packageFile '{apps,configurations,packages}/**/package.json'",
     "ncu:monorepo": "ncu --packageFile '{apps,configurations,packages}/**/package.json' -u",
     "ncu:root": "ncu --packageFile package.json -u",
@@ -50,7 +49,7 @@
     "prettier:fix": "prettier --write .",
     "prettier:lint": "prettier --check .",
     "prisma": "make prisma",
-    "prisma:turbo": "turbo run prisma",
+    "prisma:turbo": "dotenv -- turbo run prisma",
     "release": "changeset publish",
     "solhint:cmd": "solhint \"contracts/**/*.sol\"",
     "solhint:fix": "solhint \"contracts/**/*.sol\" --fix",
@@ -60,7 +59,7 @@
     "taplo:fix": "taplo format *.toml crates/**/Cargo.toml fly/**/fly.toml",
     "taplo:lint": "taplo lint *.toml crates/**/Cargo.toml fly/**/fly.toml",
     "test": "vitest",
-    "test:compile": "turbo run build --filter=contracts --filter=solutions --filter=schemas --filter=client",
+    "test:compile": "dotenv -- turbo run build --filter=contracts --filter=solutions --filter=schemas --filter=client",
     "test:coverage": "vitest --coverage --single-thread",
     "test:typecheck": "vitest typecheck",
     "test:ui": "vitest dev --ui",
@@ -68,13 +67,14 @@
     "wagmi:generate": "wagmi generate"
   },
   "dependencies": {
-    "next": "13.5.5",
-    "solc": "0.8.18"
+    "next": "13.5.6",
+    "solc": "0.8.18",
+    "wagmi": "1.4.5"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@commitlint/config-conventional": "^17.8.0",
+    "@commitlint/config-conventional": "^18.0.0",
     "@evmts/config": "^0.10.0",
     "@evmts/core": "^0.11.2",
     "@evmts/ts-plugin": "^0.11.2",
@@ -93,16 +93,16 @@
     "@openzeppelin/contracts": "^5.0.0",
     "@playwright/test": "^1.39.0",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@swc/core": "^1.3.93",
+    "@swc/core": "^1.3.94",
     "@taplo/cli": "^0.5.2",
-    "@thunderclient/cli": "^1.7.4",
+    "@thunderclient/cli": "^1.8.1",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.6",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@viem/anvil": "0.0.6",
     "@vitest/coverage-v8": "^0.34.6",
     "@vitest/ui": "^0.34.6",
@@ -111,21 +111,21 @@
     "autoprefixer": "^10.4.16",
     "chai": "^4.3.10",
     "checkly": "^4.2.0",
-    "commitlint": "^17.8.0",
-    "concurrently": "^8.2.1",
+    "commitlint": "^18.0.0",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "depcheck": "^1.4.7",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
     "esbuild": "^0.19.5",
-    "eslint": "^8.51.0",
-    "eslint-config-next": "^13.5.5",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-turbo": "^1.10.15",
+    "eslint-config-turbo": "^1.10.16",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-editorconfig": "^4.0.3",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "5.0.1",
@@ -134,12 +134,12 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
     "git-cz": "^4.9.0",
-    "hardhat": "^2.18.1",
+    "hardhat": "^2.18.2",
     "husky": "^8.0.3",
     "inngest-cli": "^0.19.0",
     "license-check-and-add": "^4.0.5",
-    "lint-staged": "^15.0.1",
-    "neonctl": "^1.23.1",
+    "lint-staged": "^15.0.2",
+    "neonctl": "^1.23.2",
     "npm-check-updates": "^16.14.6",
     "npm-package-json-lint": "^7.0.0",
     "npm-package-json-lint-config-default": "^6.0.0",
@@ -156,11 +156,11 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "tsup": "^7.2.0",
-    "turbo": "^1.10.15",
+    "turbo": "^1.10.16",
     "typescript": "^5.2.2",
-    "vercel": "^32.4.1",
+    "vercel": "^32.5.0",
     "viem": "^1.16.6",
-    "vite": "^4.4.11",
+    "vite": "^4.5.0",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6",
     "vitest-solidity-coverage": "^0.1.4"
@@ -171,8 +171,8 @@
       "next": "$next"
     },
     "patchedDependencies": {
-      "next@13.5.5": "patches/next@13.5.5.patch",
-      "@wagmi/core@1.4.4": "patches/@wagmi__core@1.4.4.patch"
+      "next@13.5.6": "patches/next@13.5.6.patch",
+      "@wagmi/core@1.4.5": "patches/@wagmi__core@1.4.5.patch"
     }
   }
 }
