--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -62,6 +62,7 @@
     "kysely-postgres-js": "^1.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.288.0",
+    "neverthrow": "^6.1.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.3",
     "next-themes": "^0.2.1",
