--- a/configurations/eslint/.depcheckrc.yml
+++ b/configurations/eslint/.depcheckrc.yml
@@ -15,3 +15,4 @@ ignores:
   - eslint-plugin-react-hooks
   - eslint-plugin-simple-import-sort
   - eslint-plugin-tailwindcss
+  - eslint-plugin-neverthrow
