feat: ini gen graph

--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -24,6 +24,8 @@ dataSources:
         - UserOperationEvent
         - UserOperationRevertReason
         - Withdrawn
+        - UserOperation
+        - Counter
       abis:
         - name: EntryPoint
           file: ./abis/EntryPoint.json
