--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -39,7 +39,7 @@
     "deploy:satsuma:mainnet": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mainnet --deploy-key ${SATSUMA_DEPLOY_KEY} --network mainnet",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
     "remove:mainnet": "graph remove --node http://lightdotso-graph.internal:9020 mainnet",
-    "test": "graph test --recompile"
+    "test": "./test.sh"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.60.0",
