--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -39,7 +39,7 @@
     "deploy:satsuma:mainnet": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mainnet --deploy-key ${SATSUMA_DEPLOY_KEY} --network mainnet",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
     "remove:mainnet": "graph remove --node http://lightdotso-graph.internal:9020 mainnet",
-    "test": "graph test"
+    "test": "./test.sh"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.60.0",
@@ -48,7 +48,7 @@
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
     "@types/node": "^20.8.7",
-    "assemblyscript": "^0.27.14",
+    "assemblyscript": "^0.19.20",
     "matchstick-as": "0.6.0",
     "typescript": "^5.2.2",
     "wabt": "1.0.32"
