feat: ini redis client

--- a/crates/polling/Cargo.toml
+++ b/crates/polling/Cargo.toml
@@ -23,6 +23,7 @@
   lightdotso-kafka = { workspace = true }
   lightdotso-opentelemetry = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  lightdotso-redis = { workspace = true }
   lightdotso-tracing = { workspace = true }
   serde_json = { workspace = true }
   tokio = { workspace = true }
