--- a/crates/polling/Cargo.toml
+++ b/crates/polling/Cargo.toml
@@ -16,6 +16,7 @@
   clap = { workspace = true, features = ["derive"] }
   ethers = { workspace = true }
   eyre = { workspace = true }
+  lightdotso-common = { workspace = true }
   lightdotso-constants = { workspace = true }
   lightdotso-contracts = { workspace = true }
   lightdotso-db = { workspace = true }
@@ -23,6 +24,8 @@
   lightdotso-kafka = { workspace = true }
   lightdotso-opentelemetry = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  lightdotso-redis = { workspace = true }
+  lightdotso-solutions = { workspace = true }
   lightdotso-tracing = { workspace = true }
   serde_json = { workspace = true }
   tokio = { workspace = true }
