--- a/package.json
+++ b/package.json
@@ -67,14 +67,14 @@
     "wagmi:generate": "wagmi generate"
   },
   "dependencies": {
-    "next": "13.5.6",
+    "next": "14.0.0",
     "solc": "0.8.18",
     "wagmi": "1.4.5"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@commitlint/config-conventional": "^18.0.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@evmts/config": "^0.10.0",
     "@evmts/core": "^0.11.2",
     "@evmts/ts-plugin": "^0.11.2",
@@ -93,13 +93,13 @@
     "@openzeppelin/contracts": "^5.0.0",
     "@playwright/test": "^1.39.0",
     "@release-it/keep-a-changelog": "^4.0.0",
-    "@swc/core": "^1.3.94",
+    "@swc/core": "^1.3.95",
     "@taplo/cli": "^0.5.2",
-    "@thunderclient/cli": "^1.8.1",
+    "@thunderclient/cli": "^1.8.4",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.31",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -111,7 +111,7 @@
     "autoprefixer": "^10.4.16",
     "chai": "^4.3.10",
     "checkly": "^4.2.0",
-    "commitlint": "^18.0.0",
+    "commitlint": "^18.2.0",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "depcheck": "^1.4.7",
@@ -119,7 +119,7 @@
     "dotenv-cli": "^7.3.0",
     "esbuild": "^0.19.5",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "^1.10.16",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -134,7 +134,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "3.13.0",
     "git-cz": "^4.9.0",
-    "hardhat": "^2.18.2",
+    "hardhat": "^2.18.3",
     "husky": "^8.0.3",
     "inngest-cli": "^0.19.0",
     "license-check-and-add": "^4.0.5",
@@ -152,14 +152,14 @@
     "solhint": "^3.6.2",
     "solidity-docgen": "0.6.0-beta.36",
     "sort-package-json": "^2.6.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.2",
     "tsup": "^7.2.0",
     "turbo": "^1.10.16",
     "typescript": "^5.2.2",
     "vercel": "^32.5.0",
-    "viem": "^1.16.6",
+    "viem": "^1.17.2",
     "vite": "^4.5.0",
     "vite-tsconfig-paths": "^4.2.1",
     "vitest": "^0.34.6",
@@ -171,8 +171,8 @@
       "next": "$next"
     },
     "patchedDependencies": {
-      "next@13.5.6": "patches/next@13.5.6.patch",
-      "@wagmi/core@1.4.5": "patches/@wagmi__core@1.4.5.patch"
+      "@wagmi/core@1.4.5": "patches/@wagmi__core@1.4.5.patch",
+      "next@14.0.0": "patches/next@14.0.0.patch"
     }
   }
 }
