feat: ini next ui

--- a/apps/explorer/package.json
+++ b/apps/explorer/package.json
@@ -31,7 +31,7 @@
     "@sentry/nextjs": "^7.75.1",
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
-    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.5",
     "connectkit": "^1.5.3",
     "kysely-postgres-js": "^2.0.0",
     "next": "^14.0.0",
