--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -44,7 +44,7 @@
     "@sentry/nextjs": "^7.75.1",
     "@tanstack/react-query": "5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
-    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.5",
     "@tremor/react": "^3.10.0",
     "@types/lodash": "^4.14.200",
     "@vercel/toolbar": "^0.1.5",
