--- a/apps/explorer/.depcheckrc.yml
+++ b/apps/explorer/.depcheckrc.yml
@@ -4,6 +4,7 @@ ignores:
   - "@lightdotso/prisma"
   - "@next-auth/prisma-adapter"
   - "@prisma/client"
+  - "@tanstack/react-query"
   - "@tanstack/react-query-devtools"
   - "@tanstack/react-query-next-experimental"
   - kysely-postgres-js
