--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -45,7 +45,7 @@
     "@sentry/nextjs": "^7.75.1",
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
-    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.5",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
