--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -54,7 +54,7 @@
     "@storybook/addon-styling": "^1.3.7",
     "@tanstack/react-query": "^5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
-    "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
+    "@tanstack/react-query-next-experimental": "^5.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
