--- a/crates/redis/Cargo.toml
+++ b/crates/redis/Cargo.toml
@@ -9,6 +9,9 @@
   repository.workspace = true
 
 [dependencies]
+  futures = { workspace = true }
   lazy_static = { workspace = true }
   lightdotso-tracing = { workspace = true }
+  rand = { workspace = true }
   redis = { version = "0.23.2", features = ["tls-native-tls"] }
+  tokio = { workspace = true }
