--- a/apps/app/.env.development
+++ b/apps/app/.env.development
@@ -2,7 +2,7 @@ DATABASE_URL="postgresql://postgres:password@localhost:6500/neon"
 NEXTAUTH_URL="http://localhost:3001"
 NEXTAUTH_SECRET="secret"
 VERCEL_ENV="development"
-# LOCAL_ENV="dev"
-# NEXT_PUBLIC_LOCAL_ENV="dev"
-# LIGHT_ADMIN_TOKEN="dev"
-# NEXT_PUBLIC_LIGHT_ADMIN_TOKEN="dev"
+LOCAL_ENV="dev"
+NEXT_PUBLIC_LOCAL_ENV="dev"
+LIGHT_ADMIN_TOKEN="dev"
+NEXT_PUBLIC_LIGHT_ADMIN_TOKEN="dev"
