--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -42,9 +42,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@sentry/integrations": "^7.75.1",
     "@sentry/nextjs": "^7.75.1",
+    "@tanstack/query-sync-storage-persister": "^5.4.3",
     "@tanstack/react-query": "5.0.5",
     "@tanstack/react-query-devtools": "^5.4.2",
     "@tanstack/react-query-next-experimental": "^5.0.5",
+    "@tanstack/react-query-persist-client": "^5.4.3",
     "@tremor/react": "^3.10.0",
     "@types/lodash": "^4.14.200",
     "@vercel/toolbar": "^0.1.5",
