--- a/crates/signer/Cargo.toml
+++ b/crates/signer/Cargo.toml
@@ -11,6 +11,7 @@
 [dependencies]
   ethers = { workspace = true }
   eyre = { workspace = true }
+  lightdotso-common = { workspace = true }
   lightdotso-redis = { workspace = true }
   lightdotso-tracing = { workspace = true }
   rusoto_core = { version = "0.48.0", default-features = false, features = [
