--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -31,6 +31,7 @@
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/ui": "workspace:*",
     "@lightdotso/utils": "workspace:*",
+    "@lightdotso/wagmi": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "@opentelemetry/exporter-trace-otlp-http": "^0.44.0",
     "@opentelemetry/resources": "^1.17.1",
