feat: ini user operation bro

--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -25,6 +25,7 @@
   lightdotso-contracts = { workspace = true }
   lightdotso-db = { workspace = true }
   lightdotso-indexer = { workspace = true }
+  lightdotso-paymaster = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-prometheus = { workspace = true }
   lightdotso-redis = { workspace = true }
