fix: retry tc api

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -52,8 +52,12 @@ jobs:
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Thunder Client Check
-        run: |
-          pnpm tc --col api.light.so,rpc.light.so
+        uses: nick-fields/retry@v2
+        with:
+          timeout_seconds: 15
+          max_attempts: 3
+          retry_on: error
+          command: pnpm tc --col api.light.so,rpc.light.so
   api-check:
     if: always()
     needs:
