--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -63,6 +63,7 @@
     "next": "^14.0.0",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
+    "next-usequerystate": "^1.9.1",
     "permissionless": "^0.0.9",
     "postgres": "^3.4.2",
     "prisma": "^5.5.2",
