--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -90,6 +90,7 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-themes": "^7.5.1",
     "@storybook/addons": "^7.5.1",
+    "@storybook/blocks": "^7.5.1",
     "@storybook/channel-postmessage": "^7.5.1",
     "@storybook/channel-websocket": "^7.5.1",
     "@storybook/client-api": "^7.5.1",
