--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -38,12 +38,13 @@
     "deploy:satsuma": "concurrently \"pnpm:deploy:satsuma:*\" --max-processes 1 --continue-on-error",
     "deploy:satsuma:arbitrum": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz arbitrum-one --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network arbitrum-one",
     "deploy:satsuma:base": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz base --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network base",
-    "deploy:satsuma:dev": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz sepolia --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network sepolia",
+    "deploy:satsuma:dev": "pnpm run dev:timestamp && graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz sepolia --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network sepolia",
     "deploy:satsuma:mainnet": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mainnet --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mainnet",
     "deploy:satsuma:matic": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz matic --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network matic",
     "deploy:satsuma:mumbai": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mumbai --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mumbai",
     "deploy:satsuma:optimism": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz optimism --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network optimism",
     "deploy:satsuma:sepolia": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz sepolia --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network sepolia",
+    "dev:timestamp": "cross-env TIMESTAMP=$(date +%s)",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
     "remove:mainnet": "graph remove --node http://lightdotso-graph.internal:9020 mainnet",
     "test": "./test.sh"
