--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -44,7 +44,7 @@
     "deploy:satsuma:mumbai": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mumbai --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mumbai",
     "deploy:satsuma:optimism": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz optimism --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network optimism",
     "deploy:satsuma:sepolia": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz sepolia --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network sepolia",
-    "dev:timestamp": "cross-env TIMESTAMP=$(date +%s)",
+    "dev:timestamp": "./timestamp.sh",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
     "remove:mainnet": "graph remove --node http://lightdotso-graph.internal:9020 mainnet",
     "test": "./test.sh"
