--- a/.license-check-and-add-config.json
+++ b/.license-check-and-add-config.json
@@ -67,6 +67,7 @@
     "*.yml",
     "apps/extension/**/*.js",
     "apps/docs/src/pages/posts/**/*.mdx",
+    "apps/subgraph/generated/**",
     "apps/subgraph/subgraph.yaml",
     "configurations/kysely/src/db/**/*.ts",
     "configurations/prisma/src/zod/**/*.ts",
