--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -39,6 +39,8 @@ dataSources:
         - event: UserOperationEvent(indexed bytes32,indexed address,indexed
             address,uint256,bool,uint256,uint256)
           handler: handleUserOperationEvent
+          receipt: true
         - event: UserOperationRevertReason(indexed bytes32,indexed address,uint256,bytes)
           handler: handleUserOperationRevertReason
+          receipt: true
       file: ./src/entry-point.ts
