--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -42,4 +42,5 @@ dataSources:
           receipt: true
         - event: UserOperationRevertReason(indexed bytes32,indexed address,uint256,bytes)
           handler: handleUserOperationRevertReason
+          receipt: true
       file: ./src/entry-point.ts
