feat: refactor subgraph (#855)
* fix: cla

* feat: refactor subgraph

* perf: ini update schema

* feat: ini transaction entitty

* feat: ini receipts

* feat: ini logindex

* feat: ini log push tx

* feat: ini receipt

* chore: update prisma

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* perf: ini package dev

* chore: update

* chore: update

* feat: ini log handler

* perf: ini save

* chore: update

* chore: update

* chore: update

* chore: ini log meme

* feat: ini uop hash

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: updaet

* feat: ini tx entities

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* feat: ini schema

* chore: update

* chore: update

* chore: update

* chore: ini receipt

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -36,13 +36,15 @@
     "deploy:local": "graph deploy --node http://localhost:8020 --ipfs http://localhost:5001 @lightdotso/mainnet",
     "deploy:mainnet": "graph deploy --node http://lightdotso-graph.internal:9020 --ipfs http://lightdotso-ipfs.internal:5001 mainnet --network mainnet",
     "deploy:satsuma": "concurrently \"pnpm:deploy:satsuma:*\" --max-processes 1 --continue-on-error",
-    "deploy:satsuma:arbitrum": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz arbitrum-one --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network arbitrum-one",
-    "deploy:satsuma:base": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz base --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network base",
-    "deploy:satsuma:mainnet": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mainnet --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mainnet",
-    "deploy:satsuma:matic": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz matic --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network matic",
-    "deploy:satsuma:mumbai": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mumbai --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mumbai",
-    "deploy:satsuma:optimism": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz optimism --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network optimism",
-    "deploy:satsuma:sepolia": "graph deploy --node https://app.satsuma.xyz/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz sepolia --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network sepolia",
+    "deploy:satsuma:arbitrum": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz arbitrum-one --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network arbitrum-one",
+    "deploy:satsuma:base": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz base --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network base",
+    "deploy:satsuma:dev": "pnpm run dev:timestamp && graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz dev --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${TIMESTAMP} --network sepolia",
+    "deploy:satsuma:mainnet": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mainnet --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mainnet",
+    "deploy:satsuma:matic": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz matic --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network matic",
+    "deploy:satsuma:mumbai": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz mumbai --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network mumbai",
+    "deploy:satsuma:optimism": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz optimism --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network optimism",
+    "deploy:satsuma:sepolia": "graph deploy --node https://subgraphs.alchemy.com/api/subgraphs/deploy --ipfs https://ipfs.satsuma.xyz sepolia --deploy-key ${SATSUMA_DEPLOY_KEY} --version-label v${npm_package_version} --network sepolia",
+    "dev:timestamp": "./timestamp.sh",
     "remove:local": "graph remove --node http://localhost:8020 @lightdotso/mainnet",
     "remove:mainnet": "graph remove --node http://lightdotso-graph.internal:9020 mainnet",
     "test": "./test.sh"
