--- a/apps/subgraph/subgraph.yaml
+++ b/apps/subgraph/subgraph.yaml
@@ -4,11 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: EntryPointv0.6.0
-    network: matic
+    network: sepolia
     source:
       abi: EntryPoint
       address: "0x5FF137D4b0FDCD49DcA30c7CF57E578a026d2789"
-      startBlock: 41335185
+      startBlock: 3257815
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -39,6 +39,8 @@ dataSources:
         - event: UserOperationEvent(indexed bytes32,indexed address,indexed
             address,uint256,bool,uint256,uint256)
           handler: handleUserOperationEvent
+          receipt: true
         - event: UserOperationRevertReason(indexed bytes32,indexed address,uint256,bytes)
           handler: handleUserOperationRevertReason
+          receipt: true
       file: ./src/entry-point.ts
