--- a/crates/graphql/Cargo.toml
+++ b/crates/graphql/Cargo.toml
@@ -14,6 +14,8 @@
   eyre = { workspace = true }
   insta = "1.17"
   lazy_static = { workspace = true }
+  lightdotso-common = { workspace = true }
+  lightdotso-prisma = { workspace = true }
   lightdotso-tracing = { workspace = true }
   reqwest = { version = "0.11", features = ["json", "blocking"] }
   tokio = { workspace = true }
